src/test/ui/impl-trait/multiple-lifetimes/ordinary-bounds-unrelated.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ordinary-bounds-unrelated.rs:16:74
   |
LL | fn upper_bounds<'a, 'b, 'c, 'd, 'e>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'d, 'e>
   |                                                                          ^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Ordinary<'b>` captures the lifetime `'b` as defined on the function body at 16:21
  --> $DIR/ordinary-bounds-unrelated.rs:16:21
   |
LL | fn upper_bounds<'a, 'b, 'c, 'd, 'e>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'d, 'e>
   |                     ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
